; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_network_common.c_inet_addr.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_network_common.c_inet_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }

@INADDR_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @inet_addr(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.in_addr, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @inet_aton(i8* %5, %struct.in_addr* %4)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @INADDR_NONE, align 4
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %8
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i64 @inet_aton(i8*, %struct.in_addr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
